Refactor footer in html files

--- a/smart-wallet-application/src/main/resources/application.properties
+++ b/smart-wallet-application/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=Smart Wallet Application
 
 server.port=8081
 
+#MVC config
+spring.mvc.hiddenmethod.filter.enabled=true
 
 # Base configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
