--- a/smart-wallet-application/pom.xml
+++ b/smart-wallet-application/pom.xml
@@ -85,6 +85,11 @@
             <artifactId>spring-boot-starter-security</artifactId>
             <version>3.4.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>4.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
