--- a/smart-wallet-application/src/main/resources/application.properties
+++ b/smart-wallet-application/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/smart_wallet_app?createDatabas
 spring.datasource.username=root
 spring.datasource.password=rootpass
 logging.level.org.hibernate.persister.entity=ERROR
+
+spring.main.allow-bean-definition-overriding=true
